fixed gaps

--- a/public/scss/product/_product.scss
+++ b/public/scss/product/_product.scss
@@ -3,8 +3,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    //gap: 30px;
-    padding:20px 0px;
+    gap: 20px;
+    padding: 20px 0px;
+}
+
+.product__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .product__title {
@@ -25,7 +32,6 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
-    gap: 20px;
 }
 
 .product__item {
@@ -34,9 +40,9 @@
     align-items: center;
     flex-direction: column;
     gap: 15px;
-    background: linear-gradient(90deg, rgba(255,255,255,255) 0%, rgba(75 122 85 / 7%) 25%, rgba(225 255 255 / 0%) 40%, rgba(75 122 85 / 7%) 80%, rgba(225 255 255 / 0%) 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 255) 0%, rgba(75 122 85 / 7%) 25%, rgba(225 255 255 / 0%) 40%, rgba(75 122 85 / 7%) 80%, rgba(225 255 255 / 0%) 100%);
     border-radius: 10px;
-   // padding:20px 0px;
+    // padding:20px 0px;
 
     &>img {
         flex: 1;
