--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -910,7 +910,15 @@ section::before {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
   padding: 20px 0px;
+}
+
+.product__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .product__title {
@@ -930,7 +938,6 @@ section::before {
   flex-direction: column;
   align-items: center;
   flex: 1;
-  gap: 20px;
 }
 
 .product__item {
